fixed: message send button overflow & text-align #35

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -94,6 +94,7 @@ position: relative;
 border: 1px solid #555;
 border-radius:25px;
   min-width:210px;
+  max-width: 100%;
 padding: 20px;
   text-align: center;
 display: inline-block;
